--- a/public/locales/az/translation.json
+++ b/public/locales/az/translation.json
@@ -35,7 +35,7 @@
     "dashboard": "İdarəetmə Paneli",
     "users": "İstifadəçilər",
     "addUser": "İstifadəçi Əlavə Et",
-    "editUser": "İstifadəçini Redaktə Et",
+    "editUser": "Profil",
     "deleteUser": "İstifadəçini Sil",
     "offices": "Ofislər",
     "addOffice": "Ofis Əlavə Et",
@@ -192,7 +192,8 @@
       "deleteSuccess": "Ziyarətçi uğurla silindi.",
       "deleteError": "Ziyarətçini silmək alınmadı.",
       "visitTime": "Ziyarət Vaxtı",
-      "visitTimeCount": "Ziyarət müddəti"
+      "visitTimeCount": "Ziyarət müddəti",
+      "notStarted": "Başlanmamış"
     },
     "add": {
       "title": "Ziyarətçi Əlavə Et",
@@ -254,7 +255,7 @@
       "submit": "Göndər",
       "submitting": "Göndərilir...",
       "successReport": "Şikayətiniz uğurla göndərildi!",
-      "errorReposrt": "Şikayət göndərilmədi.",
+      "errorReport": "Şikayət göndərilmədi.",
       "emptyDescriptionError": "Zəhmət olmasa, şikayətinizə təsvir əlavə edin.",
       "complaints": "Şikayətlər",
       "noComplaints": "Heç bir şikayət tapılmadı.",
@@ -536,6 +537,5 @@
   "noComplaintsFound": "Heç bir Şikayət tapilmadi",
   "loading": "Yüklənir...",
   "allFields": "Bütün sahələr tələb olunur.",
-  "passwordNotMatch":"Parollar uyğun gəlmir."
-
+  "passwordNotMatch": "Parollar uyğun gəlmir."
 }
